[package]
name = "snake"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = "s"
[profile.release]
opt-level = "s"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[dev-dependencies]
crossterm = "0.25.0"
